--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,18 @@ a {
   box-sizing: border-box;
 }
 
+.Container {
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+}
+
+.nav{
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
